force-app/main/default/objects/Usage__c/Usage__c.object-meta.xml
<CustomObject>
    <description>Tracks product or service usage records linked to an Account and Order Product. Publishes Platform Events to Dynatrace Salesforce Insights on create and update.</description>
    <label>Usage</label>
    <nameField>
        <displayFormat>USG-{0000}</displayFormat>
        <label>Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>