force-app/main/default/objects/Usage__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Lookup to the Account associated with this usage record. Required.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Usages</relationshipLabel>
    <relationshipName>AccountUsages</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>