force-app/main/default/objects/Usage__c/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <description>Lookup to the Order Product (OrderItem) associated with this usage record. Optional. Delete is restricted to prevent orphaned usage records.</description>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Usages</relationshipLabel>
    <relationshipName>OrderProductUsages</relationshipName>
    <type>Lookup</type>
</CustomField>