force-app/main/default/objects/Usage__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity of usage. Required. Must be greater than zero. Supports up to 6 decimal positions.</description>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>