force-app/main/default/objects/Usage__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the usage record. References the shared UsageStatus global value set. Default: New.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UsageStatus</valueSetName>
    </valueSet>
</CustomField>