force-app/main/default/objects/Usage__c/fields/UsageEndDate__c.field-meta.xml
<CustomField>
    <fullName>UsageEndDate__c</fullName>
    <description>End date of the usage period. Optional. If provided, must be on or after Usage Start Date (enforced by validation rule).</description>
    <label>Usage End Date</label>
    <type>Date</type>
</CustomField>