force-app/main/default/objects/Usage__c/fields/UsageStartDate__c.field-meta.xml
<CustomField>
    <fullName>UsageStartDate__c</fullName>
    <description>Start date of the usage period. Required. Must be on or before Usage End Date.</description>
    <label>Usage Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>