force-app/main/default/objects/Usage__c/validationRules/EndDate_Must_Be_After_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_Must_Be_After_StartDate</fullName>
    <active>true</active>
    <description>Prevents saving a Usage record where the End Date is before the Start Date. Only fires when End Date is populated.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(UsageEndDate__c)), UsageEndDate__c &lt; UsageStartDate__c)</errorConditionFormula>
    <errorDisplayField>UsageEndDate__c</errorDisplayField>
    <errorMessage>End Date must be on or after Start Date.</errorMessage>
</ValidationRule>