force-app/main/default/objects/Usage__c/validationRules/Quantity_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Prevents saving a Usage record with a Quantity of zero or less.</description>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than zero.</errorMessage>
</ValidationRule>