force-app/main/default/objects/Usage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Quantity__c</columns>
    <columns>UsageStartDate__c</columns>
    <columns>UsageEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>